Add libpldm-only option
The libpldm library in this repo is supposed to be built and used by
users outside of OpenBMC.
Adding libpldm-only option to make it possible to build only libpldm
without any dependency.

Tested: Run meson with `-Dlibpldm-only=enabled` and verify it only
        builds libpldm without OpenBMC environment.

Signed-off-by: Lei YU <mine260309@gmail.com>
Change-Id: I78f2f9866c14372d3afbc9863f6fbd695aad13f1

--- a/meson.build
+++ b/meson.build
@@ -31,6 +31,8 @@ configure_file(output: 'config.h',
 
 subdir('libpldm')
 
+if get_option('libpldm-only').disabled()
+
 libpldmutils_headers = ['.']
 libpldmutils = library(
   'pldmutils',
@@ -77,3 +79,5 @@ endif
 if get_option('utilities').enabled()
   subdir('utilities')
 endif
+
+endif # pldm-only
