--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,3 +3,5 @@ option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
 option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM', value: 'enabled')
 option('requester-api', type: 'feature', description: 'Enable libpldm requester API', value: 'enabled')
 option('utilities', type: 'feature', description: 'Enable debug utilities', value: 'enabled')
+
+option('libpldm-only', type: 'feature', description: 'Only build libpldm', value: 'disabled')
