Move libpldm test cases into libpldm directory
The test cases for different libraries in this repo are put in the same
test directory.
As a follow up of building libpldm only, move the test cases of libpldm
into libpldm/tests, so that the test cases could be built and run by
libpldm-only option.

Tested: Verify the libpldm tests are built and run by libpldm-only
        option.
        Verify all the tests are built and run without libpldm-only
        option.

Signed-off-by: Lei YU <mine260309@gmail.com>
Change-Id: I097000bef316f787ef1894f1a3feec5089ea081a

--- a/libpldm/meson.build
+++ b/libpldm/meson.build
@@ -62,3 +62,7 @@ import('pkgconfig').generate(
   description: 'PLDM protocol encode/decode C lib',
   version: meson.project_version(),
   libraries: libpldm)
+
+if get_option('tests').enabled()
+  subdir('tests')
+endif
