--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ pldmd
 /test/*.gcda
 /test/*.gcno
 /test/vgcore.*
+/libpldm/tests/vgcore.*
 /test/libpldm_base_test
 /test/libpldmresponder_base_test
 /test/libpldm_bios_test
