--- a/libpldm/tests/meson.build
+++ b/libpldm/tests/meson.build
@@ -14,26 +14,16 @@ endif
 
 gtest = dependency('gtest', main: true, disabler: true, required: true)
 gmock = dependency('gmock', disabler: true, required: true)
-pldmd = declare_dependency(sources: '../instance_id.cpp')
 
 tests = [
-  'libpldmresponder_base_test',
-  'libpldmresponder_bios_test',
-  'libpldmresponder_pdr_state_effecter_test',
-  'libpldmresponder_bios_table_test',
-  'libpldmresponder_platform_test',
-  'pldmd_instanceid_test',
-  'pldmd_registration_test',
-  'pldm_utils_test',
-  'libpldmresponder_fru_test',
+  'libpldm_base_test',
+  'libpldm_platform_test',
+  'libpldm_bios_test',
+  'libpldm_bios_table_test',
+  'libpldm_fru_test',
+  'libpldm_utils_test',
+  'libpldm_pdr_test'
 ]
-
-if get_option('oem-ibm').enabled()
-  tests += [
-    '../oem/ibm/test/libpldm_fileio_test',
-    '../oem/ibm/test/libpldmresponder_fileio_test'
-  ]
-endif
 
 foreach t : tests
   test(t, executable(t.underscorify(), t + '.cpp',
@@ -42,12 +32,8 @@ foreach t : tests
                      build_rpath: get_option('oe-sdk').enabled() ? rpath : '',
                      dependencies: [
                          libpldm,
-                         libpldmresponder,
-                         libpldmutils,
                          gtest,
-                         gmock,
-                         pldmd,
-                         dependency('phosphor-dbus-interfaces'),
-                         dependency('sdbusplus')]),
+                         gmock]),
        workdir: meson.current_source_dir())
 endforeach
+
