Move libpldm test cases into libpldm directory
The test cases for different libraries in this repo are put in the same
test directory.
As a follow up of building libpldm only, move the test cases of libpldm
into libpldm/tests, so that the test cases could be built and run by
libpldm-only option.

Tested: Verify the libpldm tests are built and run by libpldm-only
        option.
        Verify all the tests are built and run without libpldm-only
        option.

Signed-off-by: Lei YU <mine260309@gmail.com>
Change-Id: I097000bef316f787ef1894f1a3feec5089ea081a

--- a/libpldm/tests/meson.build
+++ b/libpldm/tests/meson.build
@@ -14,23 +14,20 @@ endif
 
 gtest = dependency('gtest', main: true, disabler: true, required: true)
 gmock = dependency('gmock', disabler: true, required: true)
-pldmd = declare_dependency(sources: '../instance_id.cpp')
 
 tests = [
-  'libpldmresponder_base_test',
-  'libpldmresponder_bios_test',
-  'libpldmresponder_pdr_state_effecter_test',
-  'libpldmresponder_bios_table_test',
-  'libpldmresponder_platform_test',
-  'pldmd_instanceid_test',
-  'pldmd_registration_test',
-  'pldm_utils_test',
-  'libpldmresponder_fru_test',
+  'libpldm_base_test',
+  'libpldm_platform_test',
+  'libpldm_bios_test',
+  'libpldm_bios_table_test',
+  'libpldm_fru_test',
+  'libpldm_utils_test',
+  'libpldm_pdr_test'
 ]
 
 if get_option('oem-ibm').enabled()
   tests += [
-    '../oem/ibm/test/libpldmresponder_fileio_test'
+    '../../oem/ibm/test/libpldm_fileio_test',
   ]
 endif
 
@@ -41,12 +38,8 @@ foreach t : tests
                      build_rpath: get_option('oe-sdk').enabled() ? rpath : '',
                      dependencies: [
                          libpldm,
-                         libpldmresponder,
-                         libpldmutils,
                          gtest,
-                         gmock,
-                         pldmd,
-                         dependency('phosphor-dbus-interfaces'),
-                         dependency('sdbusplus')]),
+                         gmock]),
        workdir: meson.current_source_dir())
 endforeach
+
