--- a/test/meson.build
+++ b/test/meson.build
@@ -24,6 +24,7 @@ tests = [
   'libpldm_bios_table_test',
   'libpldmresponder_bios_test',
   'libpldmresponder_bios_attribute_test',
+  'libpldmresponder_bios_string_attribute_test',
   'libpldmresponder_pdr_state_effecter_test',
   'libpldmresponder_bios_table_test',
   'libpldmresponder_platform_test',
