pldmtool : obtain PLDM Instance Id
This commit makes a dbus call and obtains the
instanceId and modifies the request message and
corresponding response message is obtained.
The loopback response message logic is removed as it
is the request message itself being received and
there is no need to specifically process this.
The code is simplified to just wait on a
matching response message.

Tested:
./pldmtool base GetPLDMTypes
& ./pldmtool base GetPLDMTypes
Encode request successfully
Request Message:
08 01 80 00 04
Success in creating the socket : RC = 4
Success in connecting to socket : RC = 0
Success in sending message type as pldm to mctp : RC = 0
Write to socket successful : RC = 5
Total length: 14
Encode request successfully
Request Message:
08 01 81 00 04
Success in creating the socket : RC = 4
Success in connecting to socket : RC = 0
Success in sending message type as pldm to mctp : RC = 0
Write to socket successful : RC = 5
Total length: 14
Shutdown Socket successful :  RC = 0
Response Message:
08 01 01 00 04 00 1d 00 00 00 00 00 00 00
Shutdown Socket successful :  RC = 0
Response Message:
08 01 00 00 04 00 1d 00 00 00 00 00 00 00
Supported types: 0(base) 2(platform) 3(bios) 4(fru)
Supported types: 0(base) 2(platform) 3(bios) 4(fru)

Change-Id: I688b58bdade817645321942b4a798e14e75b6021
Signed-off-by: Pavithra Barithaya <pbaritha@in.ibm.com>

--- a/tool/meson.build
+++ b/tool/meson.build
@@ -11,6 +11,6 @@ executable(
   'pldmtool',
   sources,
   implicit_include_directories: false,
-  dependencies: [libpldm, libpldmutils],
+  dependencies: [libpldm, libpldmutils, dependency('sdbusplus')],
   install: true,
   install_dir: get_option('bindir'))
