--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,3 +5,4 @@ option('requester-api', type: 'feature', description: 'Enable libpldm requester 
 option('utilities', type: 'feature', description: 'Enable debug utilities', value: 'enabled')
 
 option('libpldm-only', type: 'feature', description: 'Only build libpldm', value: 'disabled')
+option('DMA-MAXSIZE', type: 'integer', description: 'OEM-IBM: max DMA size', value: 16773120)
