soft-off: Add pldm host soft off requester application.
Since the phosphor-softpoweroff is too tied up to IPMI, we need to
implement a new pldm host soft off requester application in parallel in
the pldm repo.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I47534bb25c976a0004a1cd9f07d7590e605ce243
Signed-off-by: Chicago Duan <duanzhijia01@inspur.com>

--- a/meson.build
+++ b/meson.build
@@ -85,4 +85,8 @@ if get_option('utilities').enabled()
   subdir('utilities')
 endif
 
+if get_option('softoff').enabled()
+  subdir('softoff')
+endif
+
 endif # pldm-only
