--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,6 +3,7 @@ option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
 option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM', value: 'enabled')
 option('requester-api', type: 'feature', description: 'Enable libpldm requester API', value: 'enabled')
 option('utilities', type: 'feature', description: 'Enable debug utilities', value: 'enabled')
+option('softoff', type: 'feature', description: 'Enable soft power off', value: 'enabled')
 
 option('libpldm-only', type: 'feature', description: 'Only build libpldm', value: 'disabled')
 option('oem-ibm-dma-maxsize', type: 'integer', description: 'OEM-IBM: max DMA size', value: 16773120) #16MB - 4K
