--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,6 +4,7 @@ option('oem-ibm', type: 'feature', description: 'Enable IBM OEM PLDM', value: 'e
 option('requester-api', type: 'feature', description: 'Enable libpldm requester API', value: 'enabled')
 option('utilities', type: 'feature', description: 'Enable debug utilities', value: 'enabled')
 option('softoff', type: 'feature', description: 'Build soft power off application', value: 'enabled')
+option('time-out-seconds', type: 'integer', description: 'Time to wait for the system to soft off', value: 7200)#def 7200s
 
 option('libpldm-only', type: 'feature', description: 'Only build libpldm', value: 'disabled')
 option('oem-ibm-dma-maxsize', type: 'integer', description: 'OEM-IBM: max DMA size', value: 16773120) #16MB - 4K
