oem/libpldm: platform: implement requester flow for GetAlertStatus
For the requester, need to encode reqeuest data and send responder,
waiting for recive responder data to decode, so need to implement
encode/decode(Requester flow only) for GetAlertStatus.

The GetAlertStatus is a custom oem command and
refer to:https://github.com/ibm-openbmc/dev/issues/890.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I0a3d1d8f79fe80194a0b2208bce090783ad74f0b

--- a/libpldm/tests/meson.build
+++ b/libpldm/tests/meson.build
@@ -28,6 +28,7 @@ tests = [
 if get_option('oem-ibm').enabled()
   tests += [
     '../../oem/ibm/test/libpldm_fileio_test',
+    '../../oem/ibm/test/libpldm_platform_test',
   ]
 endif
 
