events: Implement event handler code for PLDM
PLDM supports platform event message by which events can be generated
by PLDM entity and can be processed by another entity. This patch adds
the support to map the request data in the command to a BMC D-Bus
property. The sensorID in the command will be used to lookup in the
PDR to fetch the containerID, entityType and entityInstanceNumber.
This patch provides the infrastructure of a system specific JSON to
map the PDR details to the D-Bus property and to set the D-Bus
property to the value based on the eventState.

Signed-off-by: Tom Joseph <tomjoseph@in.ibm.com>
Change-Id: I50dea23eccbdf29ad1b4cf2c9ab5700d74c12c68

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -18,7 +18,8 @@ sources = [
   'pdr.cpp',
   'platform.cpp',
   'fru_parser.cpp',
-  'fru.cpp'
+  'fru.cpp',
+  'event_parser.cpp'
 ]
 
 if get_option('oem-ibm').enabled()
