events: Implement event handler code for PLDM
PLDM supports platform event message by which events can be
generated by a PLDM entity and can be proceesed by another entity.

Signed-off-by: Tom Joseph <tomjoseph@in.ibm.com>
Change-Id: I50dea23eccbdf29ad1b4cf2c9ab5700d74c12c68

--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -14,7 +14,8 @@ sources = [
   'pdr.cpp',
   'platform.cpp',
   'fru_parser.cpp',
-  'fru.cpp'
+  'fru.cpp',
+  'event_handler.cpp'
 ]
 
 if get_option('oem-ibm').enabled()
