--- a/meson.build
+++ b/meson.build
@@ -56,6 +56,7 @@ subdir('libpldmresponder')
 deps = [
   libpldm,
   libpldmresponder,
+  libpldmutils,
   dependency('sdbusplus'),
   dependency('sdeventplus'),
   dependency('phosphor-dbus-interfaces')
@@ -66,6 +67,7 @@ executable(
   'pldmd.cpp',
   'dbus_impl_requester.cpp',
   'instance_id.cpp',
+  'host_pdr_handler.cpp',
   implicit_include_directories: false,
   dependencies: deps,
   install: true,
