event: Handling pldmPDRRepositoryChgEvent
Added a handler to react to the "pldmPDRRepositoryChgEvent" event and
extract the data. If the eventDataFormat is "formatIsPDRHandles" then
the changeRecords are further extracted. If the eventDataOperation is
"recordAdded" then the PDRHandles are extracted from the changeEntry
data and stored in the "pdrRecordHandle" vector.

"decode_pldm_pdr_repository_chg_event_data" function will extract the
eventData and changeRecord from the pldmPDRRepositoryChgEvent class
while the "decode_pldm_pdr_repository_change_record_data" will extract
the changeEntries data from the changeRecord. Unit tests for the above
decode functions have been added.

Extracted PDR handles are used to fetch PDRs corresponding to the same
from the host.

Signed-off-by: Zahed Hossain <zahzahed@in.ibm.com>
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I32e8745e04ac82393e067c0f0ab48802809495a6

--- a/test/meson.build
+++ b/test/meson.build
@@ -55,6 +55,7 @@ foreach t : tests
                          gmock,
                          pldmd,
                          dependency('phosphor-dbus-interfaces'),
+                         dependency('sdeventplus'),
                          dependency('sdbusplus')]),
        workdir: meson.current_source_dir())
 endforeach
