--- a/meson.build
+++ b/meson.build
@@ -57,6 +57,7 @@ subdir('libpldmresponder')
 
 deps = [
   libpldm,
+  libpldmutils,
   libpldmresponder,
   libpldmutils,
   dependency('sdbusplus'),
@@ -70,6 +71,7 @@ executable(
   'dbus_impl_requester.cpp',
   'instance_id.cpp',
   'dbus_impl_pdr.cpp',
+  'dbus_to_host_effecters.cpp',
   implicit_include_directories: false,
   dependencies: deps,
   install: true,
