pldm : pldm host soft off:Load json file and get the host soft off timeout seconds
pldm-softpoweroff application will load soft.json to get
the host soft off timeout seconds.

Tested:
Add soft.Json to repices-phosphor/pldm. Using the pldm-softpoweroff
can get the host soft off timeout seconds.

Signed-off-by: Chicago Duan <duanzhijia01@inspur.com>
Change-Id: Ic1bbf8d88674b3a102676689c811a86bd0fcf541

--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,7 @@ conf_data.set_quoted('PDR_JSONS_DIR', '/usr/share/pldm/pdr')
 conf_data.set_quoted('FRU_JSONS_DIR', '/usr/share/pldm/fru')
 conf_data.set_quoted('HOST_JSONS_DIR', '/usr/share/pldm/host')
 conf_data.set_quoted('EVENTS_JSONS_DIR', '/usr/share/pldm/events')
+conf_data.set_quoted('SOFT_OFF_TIMEOUT_JSON', '/usr/share/pldm/softoff/softoff.json')
 if get_option('oem-ibm').enabled()
   conf_data.set_quoted('FILE_TABLE_JSON', '/usr/share/pldm/fileTable.json')
   conf_data.set_quoted('LID_PERM_DIR', '/usr/share/host-fw')
