pldm : Pldm host soft off : Wait the host soft off responds
After start a timer,pldm-softpowerroff application need
Subscribe to the xyz.openbmc_project.PLDM.Event StateSensorEvent signal,
When the host soft off is complete, , it sends a pldm event Msg to BMC.
After pldmd receive this event Msg ,it will emit the StateSensorEvent signal.
When the pldm-softpowerroff receive the signal,it will stop the timer and
exit.

Signed-off-by: Chicago Duan <duanzhijia01@inspur.com>
Change-Id: I486d8068d013766329f78685acc0508fc3cb6c95

--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,7 @@ project('pldm', ['c', 'cpp'],
 # stuff for ARM. See https://stackoverflow.com/questions/48149323/strange-gcc-warning-when-compiling-qt-project
 # Basically, gcc 6 and gcc 7 are not ABI compatible, but since the whole OpenBMC
 # project uses the same compiler, we can safely ignmore these info notes.
-add_project_arguments('-Wno-psabi', '-Wno-unused', language: 'cpp')
+add_project_arguments('-Wno-psabi', language: 'cpp')
 
 conf_data = configuration_data()
 conf_data.set_quoted('BIOS_JSONS_DIR', '/usr/share/pldm/bios')
