--- a/softoff/meson.build
+++ b/softoff/meson.build
@@ -1,7 +1,9 @@
 deps = [
     libpldm,
+    libpldmutils,
     dependency('sdeventplus'),
     dependency('sdbusplus'),
+    dependency('sdeventplus'),
     dependency('phosphor-dbus-interfaces'),
     ]
 
@@ -12,4 +14,18 @@ executable('pldm-softpoweroff',source,
            dependencies: deps,
            install: true,
            install_dir: get_option('bindir'))
+
+install_data(
+    'guardChassisOffTarget.sh',
+    install_mode: 'rwxr-xr-x',
+    install_dir: get_option('bindir'),
+)
+
+systemd = dependency('systemd')
+servicedir = systemd.get_pkgconfig_variable('systemdsystemunitdir')
+
+configure_file(input: 'services/guardChassisOffTarget@.service',
+                 output: 'guardChassisOffTarget@.service',
+                 copy: true,
+                 install_dir: servicedir)
 
