pldm : Pldm host soft off : Wait the host soft off responds and set chassis off
After start a timer,pldm-softpowerroff application need
Subscribe to a event Msg, which is pldm host soft off property transition.
When the host soft off is complete, , it sends a pldm event Msg to BMC.
After pldm receive this event Msg and set the pldm host soft off property transition,
pldm-softpowerroff will stop the timer and send chassis off command.

pldm-softpowerroff uses guardChassisOffTarget@.service and
guardChassisOffTarget.sh to guard the chassis off target. Prevent
hard power off during host soft off.

Todo: The pldm host soft off Dbus PATH and interface need to be creat.

Test:
Tested ok on fp5280g2.Manually copy guardchassisofftarget@.service to the /lib/systemd/system
and copy guardChassisOffTarget.sh to the /usr/bin.Then test the following features:
1、Execute pldm-softpowerroff on bmc. Leave the host running.  When the timer is expired,
the host will chassis off.
2、Execute pldm-softpowerroff on bmc. Use set-proprety to modify pldm host soft off property,
the host will chassis off.
3、Execute pldm-softpowerroff on bmc. We can't use obmcutil chassisoff/poweroff to
shut down the host before the timer expired and the property transition. So the guard chassis
off feature is OK.

Signed-off-by: Chicago Duan <duanzhijia01@inspur.com>
Change-Id: I486d8068d013766329f78685acc0508fc3cb6c95

--- a/softoff/meson.build
+++ b/softoff/meson.build
@@ -3,6 +3,7 @@ deps = [
     libpldmutils,
     dependency('sdeventplus'),
     dependency('sdbusplus'),
+    dependency('sdeventplus'),
     dependency('phosphor-dbus-interfaces'),
     ]
 
@@ -13,4 +14,18 @@ executable('pldm-softpoweroff',source,
            dependencies: deps,
            install: true,
            install_dir: get_option('bindir'))
+
+install_data(
+    'guardChassisOffTarget.sh',
+    install_mode: 'rwxr-xr-x',
+    install_dir: get_option('bindir'),
+)
+
+systemd = dependency('systemd')
+servicedir = systemd.get_pkgconfig_variable('systemdsystemunitdir')
+
+configure_file(input: 'services/guardChassisOffTarget@.service',
+                 output: 'guardChassisOffTarget@.service',
+                 copy: true,
+                 install_dir: servicedir)
 
