set a host effecter dynamically
This commit allows the BMC to have a mechanism to move
the Host from standby to runtime by means of setting a
D-Bus property and thus setting the relevant Host effecter.
Apart from that this change reads the Host PDR and sets
appropriate effecter in Host.

Change-Id: I41025d99d2b4b3452d4c51b03efe3750e159328b
Signed-off-by: Sampa Misra <sampmisr@in.ibm.com>

--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ conf_data.set_quoted('BIOS_JSONS_DIR', '/usr/share/pldm/bios')
 conf_data.set_quoted('BIOS_TABLES_DIR', '/var/lib/pldm/bios')
 conf_data.set_quoted('PDR_JSONS_DIR', '/usr/share/pldm/pdr')
 conf_data.set_quoted('FRU_JSONS_DIR', '/usr/share/pldm/fru')
+conf_data.set_quoted('HOST_EFFECTER_JSONS_DIR', '/usr/share/pldm/effecter')
 if get_option('oem-ibm').enabled()
   conf_data.set_quoted('FILE_TABLE_JSON', '/usr/share/pldm/fileTable.json')
   conf_data.set_quoted('LID_PERM_DIR', '/usr/share/host-fw')
@@ -55,6 +56,7 @@ subdir('libpldmresponder')
 
 deps = [
   libpldm,
+  libpldmutils,
   libpldmresponder,
   dependency('sdbusplus'),
   dependency('sdeventplus'),
@@ -66,6 +68,7 @@ executable(
   'pldmd.cpp',
   'dbus_impl_requester.cpp',
   'instance_id.cpp',
+  'dbus_to_host_effecters.cpp',
   implicit_include_directories: false,
   dependencies: deps,
   install: true,
