API to parse FRU record data into D-bus object
Implemented a new API which will help parse the PLDM FRU record data
which is in compliance with the "Table 2" of spec "DSP0257_1.0.0". The
API will parse the FRU record whose type is "General FRU Record" and
encoding type is "ASCII" all others values are currently ignored.

Signed-off-by: Zahed Hossain <zaxxed@gmail.com>
Change-Id: I58c8e74bce90f013f3a9a3bc7586aaa4ca8c574f

--- a/meson.build
+++ b/meson.build
@@ -68,6 +68,7 @@ executable(
   'pldmd.cpp',
   'dbus_impl_requester.cpp',
   'instance_id.cpp',
+  'pldm_fru_parser.cpp',
   implicit_include_directories: false,
   dependencies: deps,
   install: true,
