Add test for the GeneratePDRByStateSensor method
Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: Ie53dfa61e01f8a20b785f4cd305032a965cbaac3

--- a/test/meson.build
+++ b/test/meson.build
@@ -30,6 +30,7 @@ tests = [
   'libpldmresponder_bios_integer_attribute_test',
   'libpldmresponder_bios_enum_attribute_test',
   'libpldmresponder_pdr_effecter_test',
+  'libpldmresponder_pdr_sensor_test',
   'libpldmresponder_bios_table_test',
   'libpldmresponder_platform_test',
   'pldmd_instanceid_test',
