--- a/libpldmresponder/meson.build
+++ b/libpldmresponder/meson.build
@@ -20,7 +20,7 @@ sources = [
   'platform.cpp',
   'fru_parser.cpp',
   'fru.cpp',
-  '../host_pdr_handler.cpp',
+  '../host-bmc/host_pdr_handler.cpp',
   'event_parser.cpp'
 ]
 
