common: code re-org
Move common files under a commin/ directory.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I0eaf91d4ee94c1e78228da0c50892f82e91912fa

--- a/meson.build
+++ b/meson.build
@@ -39,7 +39,7 @@ if get_option('libpldm-only').disabled()
 libpldmutils_headers = ['.']
 libpldmutils = library(
   'pldmutils',
-  'utils.cpp',
+  'common/utils.cpp',
   version: meson.project_version(),
   dependencies: [
       libpldm,
