Rename tool/ as pldmtool/
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I38d7a6ab907014cd5fca049b095d692d069feab1

--- a/meson.build
+++ b/meson.build
@@ -89,7 +89,7 @@ configure_file(
   output: 'pldmd.service',
 )
 
-subdir('tool')
+subdir('pldmtool')
 
 if get_option('tests').enabled()
   subdir('test')
