configurations: add PDR config JSONs
Add configurations for BMC owned PDRs. There's code, that on finding
thes JSONs, will create PDRs for the BMC. Previously these configs
were included in the bitbake metadata, now they're being moved in-repo.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: I688444e50de486383f22d38a82dc40ce51bc8226

--- a/configurations/meson.build
+++ b/configurations/meson.build
@@ -12,3 +12,5 @@ install_subdir('fru', install_dir: packagedir)
 if get_option('oem-ibm').enabled()
     install_subdir('../oem/ibm/configurations/fru', install_dir: packagedir)
 endif
+
+install_subdir('pdr', install_dir: packagedir)
