configurations: add Host effecter JSONs
This commit adds a JSON related to host effecters.
There is code, that on finding the JSON, will set
relevant host effecter when the associated D-Bus
property is set in the BMC.

Change-Id: I38e6cfaf0213797bd069cf23d9fd2bbad4fde45e
Signed-off-by: Sampa Misra <sampmisr@in.ibm.com>

--- a/configurations/meson.build
+++ b/configurations/meson.build
@@ -14,3 +14,4 @@ if get_option('oem-ibm').enabled()
 endif
 
 install_subdir('pdr', install_dir: packagedir)
+install_subdir('host', install_dir: packagedir)
